--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <br>
   <h1>This is the official CheapFruitzz site.</h1>
   <br>
-  <h2>Heres our stock list: <a href="/stock">Click</a></h2>
+  <h2>Heres our stock list: <a href="/stock.html">Click</a></h2>
   <br>
   <br>
   <br>
