--- a/stock.html
+++ b/stock.html
@@ -1,1 +1,30 @@
-<img src="https://i.imgur.com/sxRBQ0W.png"></img>
+<table style="border-collapse: collapse; width: 100%; height: 72px;" border="1">
+<tbody>
+<tr style="height: 18px;">
+<td style="width: 33.3333%; height: 18px;">Buddha</td>
+<td style="width: 33.3333%; height: 18px;">$20</td>
+<td style="width: 33.3333%; height: 18px;">1 in stock</td>
+</tr>
+<tr style="height: 18px;">
+<td style="width: 33.3333%; height: 18px;">Rumble</td>
+<td style="width: 33.3333%; height: 18px;">$20</td>
+<td style="width: 33.3333%; height: 18px;">1 in stock</td>
+</tr>
+<tr style="height: 18px;">
+<td style="width: 33.3333%; height: 18px;">Water</td>
+<td style="width: 33.3333%; height: 18px;">$10</td>
+<td style="width: 33.3333%; height: 18px;">1 in stock</td>
+</tr>
+<tr style="height: 18px;">
+<td style="width: 33.3333%; height: 18px;">More</td>
+<td style="width: 33.3333%; height: 18px;">coming</td>
+<td style="width: 33.3333%; height: 18px;">soon!</td>
+</tr>
+</tbody>
+</table>
+
+<style>
+  body {
+    font-family: monospace;
+  }
+</style>
