--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <br>
   <h2>Heres our stock list: <a href="/stock.html">Click</a></h2>
   <br>
+  <h3>Join our discord <a href="/discord.html">here</a></h3>
+  <br>
   <br>
   <br>
   <br>
